force-app/main/default/objects/Budget__c/fields/Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Income__c</fullName>
    <formula>Total_Income__c - Total_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>