force-app/main/default/objects/Budget__c/fields/Total_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense__c</fullName>
    <label>Total Expense</label>
    <summarizedField>Expense__c.Value__c</summarizedField>
    <summaryForeignKey>Expense__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>