force-app/main/default/objects/Budget__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <externalId>true</externalId>
    <label>User ID</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>